[package]
name = "fems-log"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio-tungstenite = "0.28.0"
jsonrpc-lite = "0.6.1"
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
# tokio-postgres = "0.7.15"
# postgres-types = { version = "0.2.11", features = ["derive"] }
diesel = { version = "2.3.3", features = ["postgres", "64-column-tables"] }
# refinery = { version = "0.9.0", features = ["tokio-postgres"] }
